# micropython-max9814-microphone

./: .gitignore  README.md  main.py  micropython-max9814-microphone.code-workspace  pyproject.toml
